# tree-sitter-astro

./: .gitignore  .gitmodules  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
queries/: injections.scm
script/: expected_parse_failures.txt  fuzz-sanitize.ps1  fuzz-sanitize.sh  parse-examples  parse-examples.ps1
src/: extra.h  grammar.json  node-types.json  parser.c  scanner.c  tag.h
test/corpus/: html-comment-in-interpolation.txt  html-ish-content-inside-js-braces.txt  less-than-greater-than-in-html-interpolations.txt  nested-js-braces-in-html-interpolation.txt
