[package]
name = "tree-sitter-astro"
description = "Astro grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "astro"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/virchau13/tree-sitter-astro"
edition = "2024"
license = "MIT"
build = "bindings/rust/build.rs"
include = ["grammar.js", "queries/*", "src/*", "tree-sitter.json", "LICENSE"]
autoexamples = false

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.6"

[build-dependencies]
cc = "1.2.52"

[dev-dependencies]
tree-sitter = "0.26.3"
